src/app/components/main/welcome-view/welcome-view.component.scss
@use '../../../../styles/abstracts/variables' as vars;
@use '../../../../styles/abstracts/mixins/grid' as mxns;

.welcome-view-container {
    background: vars.$app-yellow-green-radial-gradient-welcome;
    position: relative;
}

.welcome-view-left,
.welcome-view-right {
    width: 100%;
    padding: 0 vars.$spacing-x4;

    @include mxns.md {
        width: 50%;
    }
}

.welcome-view {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.welcome-view-left {
    order: 2;
    position: relative;
    text-align: center;
    z-index: 4;

    @include mxns.md {
        order: 1;
        text-align: left;
    }

    .welcome-view-title,
    .welcome-view-info {
        color: white;
    }

    .welcome-view-info {
        margin-top: 24px;
        font-size: 24px;
        line-height: 40px;
    }

    .welcome-view-left-buttons {
        display: flex;
        align-items: center;
        gap: vars.$spacing-x12;
        flex-wrap: wrap;
        justify-content: center;

        @include mxns.md {
            justify-content: unset;
        }

        > app-button {
            width: 100%;

            @include mxns.md {
                width: auto;
            }
        }
    }
}

.welcome-view-right {
    order: 1;
    position: relative;

    @include mxns.md {
        order: 2;
        position: static;
    }
}

.welcome-view-image {
    max-width: 100%;
    position: relative;
    z-index: 2;
}

.welcome-view-image-background,
.welcome-view-image-foreground {
    display: none;

    @supports (mix-blend-mode: screen) {
        display: block;
        height: 100%;
        left: -10%;
        mix-blend-mode: screen;
        object-fit: cover;
        position: absolute;
        top: 0;
        width: 120%;

        animation-name: fog;
        animation-timing-function: ease-in-out;
        animation-iteration-count: infinite;

        @include mxns.md {
            object-fit: contain;
            left: 0;
            width: 100%;
        }
    }
}

.welcome-view-image-background {
    @supports (mix-blend-mode: screen) {
        z-index: 1;
        animation-duration: 53s;
        animation-direction: alternate-reverse;
    }
}
.welcome-view-image-foreground {
    @supports (mix-blend-mode: screen) {
        z-index: 3;
        animation-duration: 29s;
        animation-direction: alternate;
    }
}

@keyframes fog {
    0%,
    100% {
        transform: translateX(0) translateY(0) scale(1) skew(0);
        filter: blur(0px);
    }
    25% {
        transform: translateX(-1rem) translateY(-1rem) scale(0.95)
            skew(-2deg, 3deg);
        filter: blur(1px);
    }
    50% {
        transform: translateX(1rem) translateY(0) scale(1) skew(2deg);
        filter: blur(0px);
    }
    75% {
        transform: translateX(-1rem) translateY(1rem) scale(1.05)
            skew(2deg, -2deg);
        filter: blur(1px);
    }
}

